# reflecxx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  ProtoGenerate.cmake  Readme.md  ReflecxxGen.cmake  basics.cpp  clangtest.py  generated_test.cpp  notes.txt  out.hpp  parse.py  parse_types.py  proto_base.hpp  testpp.cpp  visitor.hpp  visitor_generator.py
generator/: parse.py  parse_types.py  visitor_generator.py
generator/clang_reference/: README.md  __init__.py  cindex.py  cindex.py.patch  enumerations.py
proto/: CMakeLists.txt
proto/include/proto/: attributes.hpp  enum_visitor.hpp  json_visitor.hpp  proto.hpp  proto_base.hpp  struct_visitor.hpp
proto/include/proto/detail/: proto_detail.hpp
proto/include/proto/impl/: enum_visitor_impl.hpp  struct_visitor_impl.hpp
reference/: cindex.py
reflecxx/: CMakeLists.txt
reflecxx/include/reflecxx/: attributes.hpp  enum_visitor.hpp  json_visitor.hpp  reflecxx.hpp  reflecxx_base.hpp  struct_visitor.hpp  types.hpp  visit.hpp
reflecxx/include/reflecxx/detail/: empty.hpp  reflecxx_detail.hpp  types.hpp  visit.hpp
reflecxx/include/reflecxx/impl/: enum_visitor_impl.hpp  struct_visitor_impl.hpp
test/: CMakeLists.txt  classes.hpp  conanfile.txt  enums.hpp  json_visitor.hpp  main.cpp  structs.hpp  test_auto_json.cpp  test_build_type_headers.cpp  test_classes.hpp  test_enum_visitor.cpp  test_enums.hpp  test_json_visitor.cpp  test_struct_visitor.cpp  test_structs.hpp  test_types.cpp  test_types.hpp  types.cpp
test/cmake/: ConanSetup.cmake
test/libtest_types/: type_helpers.cpp
test/libtest_types/include/libtest_types/: classes.hpp  enums.hpp  structs.hpp
